--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <span>
                 <h2 id = "saludo">Hola</h2>
                 <h3 id = "textoDebajoDeHola">Esto es lo que soy y lo que hago</h3>
-                <a href="#curriculum" class="dynamic-button">CURRICULUM</a>
+                <a href="#curriculum" class="dynamic-button">CURRICULUM</a><br>
                 <h4 id = "textoDescriptivo">Soy una estudiante motivada en la carrera de Computación, con sólida formación en programación, diseño de software y desarrollo de aplicaciones. Apasionada por la tecnología y el aprendizaje continuo, busco aplicar mis habilidades en proyectos prácticos y en un entorno profesional dinámico.</h4>
             </span>
         </section>
