--- a/index.html
+++ b/index.html
@@ -39,13 +39,17 @@
             </div>
         </section>
         <section>
-            <span>
+            <div id="contenedorTexto">
                 <h2 id="saludo">Hola</h2>
                 <h3 id="textoDebajoDeHola">Esto es lo que soy y lo que hago</h3>
+                <h4 id="textoDescriptivo">
+                    Soy una estudiante motivada en la carrera de Computación, con sólida formación en programación, diseño de software y desarrollo de aplicaciones. Apasionada por la tecnología y el aprendizaje continuo, busco aplicar mis habilidades en proyectos prácticos y en un entorno profesional dinámico.
+                </h4>
+            </div>
+            <div id="contenedorBoton">
                 <a href="#curriculum" class="dynamic-button">CURRICULUM</a>
-                <h4 id="textoDescriptivo">Soy una estudiante motivada en la carrera de Computación, con sólida formación en programación, diseño de software y desarrollo de aplicaciones. Apasionada por la tecnología y el aprendizaje continuo, busco aplicar mis habilidades en proyectos prácticos y en un entorno profesional dinámico.</h4>
-            </span>
-        </section>
+            </div>
+    </section>
     </header>
     <nav>
         <ul>
