--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 </h4>
             </div>
             <br><br>
+            <div></div>
             <div id="contenedorBoton">
                 <a href="#curriculum" class="dynamic-button">CURRICULUM</a>
             </div>
