EliminarBoton index.html

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             </div>
             <br><br>
             <div></div>
-            <div id="contenedorBoton">
+            <!---eliminar boton<div id="contenedorBoton">
                 <a href="#curriculum" class="dynamic-button">CURRICULUM</a>
-            </div>
+            </div>--->
         </section>
     </header>
     <nav>
